# botfather.dev

./: .flake8  .gitignore  bot.py  manage.py  pyproject.toml
apps/account/: admin.py  apps.py  models.py
apps/account/migrations/: 0001_initial.py  0002_alter_user_options.py
apps/core/management/commands/: botstart.py  initadmin.py
apps/product/: admin.py  apps.py  models.py
apps/product/migrations/: 0001_initial.py  0002_auto_20211110_1851.py
senabot/: asgi.py  settings.py  urls.py  wsgi.py
tgbot/: config.py
tgbot/filters/: admin.py
tgbot/handlers/: admin.py  admin_panel.py  echo.py  items.py  start.py  task3.py  user.py
tgbot/handlers/users/: inline.py
tgbot/keyboards/: admin_panel.py  items.py  start_admin.py  task3.py
tgbot/keyboards/factory/: ft_admin_panel.py  items.py  start_admin.py  task3_data.py
tgbot/middlewares/: db.py
tgbot/misc/: items.py  states.py
